added the park category

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     $("#play2").click(function() {
         playGame("greetings");
     });
+    $("#play3").click(function() {
+        playGame("the park");
+    });
+
+
 </script>
+
+
 
 </html>
